<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <!-- Set event name -->

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:gravity="center"
        android:hint="@string/hint_event_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true" />

    <!-- Set event date -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:gravity="center"
        android:orientation="horizontal" >

        <!-- event date label -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/event_date_label" />
        
        <!-- event date picker -->

        <Spinner
            android:id="@+id/dateSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center" />
    </LinearLayout>

    <!-- Set remind day -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        android:gravity="center"
        android:orientation="horizontal" >

        <!-- remind day label -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/remind_day_label" />

        <!-- remind day picker -->

        <Spinner
            android:id="@+id/daysSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>